# pypsrp

./: .coveragerc  CHANGELOG.md  New-PSSessionLogger.ps1  http-testing.py  jordan.py  pyproject.toml  requirements-dev.txt  setup.cfg
build_helpers/: lib.sh
src/psrp/: __init__.py  _async.py  _compat.py  _exceptions.py  _host.py  _sync.py  _winrs.py  _wsman.py
src/psrp/_connection/: connection.py  connection_info.py  out_of_proc.py  process.py  ssh.py  wsman.py
src/psrp/_io/: wsman.py
src/psrp/_wsman/: __init__.py  _auth.py  _backends.py  _encryption.py  _transport.py
src/psrp/io/: wsman.py
src/psrp/protocol/: winrs.py  wsman.py
stubs/spnego/: __init__.pyi  _context.pyi  auth.pyi  channel_bindings.pyi  exceptions.pyi  iov.pyi
tests/psrp/: conftest.py  test_async.py
tests/psrp/io/: test_wsman.py
