[metadata]
name = pypsrp
version = 1.0.0b1
url = https://github.com/jborean93/pypsrp
author = Jordan Borean
author_email = jborean93@gmail.com
license = MIT
license_files = LICENSE
description = PowerShell Remoting Protocol and WinRM for Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    winrm
    psrp
    winrs
    windows
    powershell
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    cryptography
    httpcore < 1.0.0
    httpx < 1.0.0
    psrpcore @ https://github.com/jborean93/psrpcore/archive/b491521.zip
    pyspnego < 1.0.0
    requests >= 2.9.1

[options.packages.find]
where = src

[options.package_data]
psrp = py.typed
pypsrp = py.typed
pypsrp.pwsh_scripts = *.ps1

[options.extras_require]
credssp =
    requests-credssp>=2.0.0
kerberos =
    pyspnego[kerberos]
socks =
    async-timeout
    python-socks
ssh =
    asyncssh
